feat: added login route for user login
